# crypto_portfolio

./: Makefile  compose.yml
server/: .env.example  Cargo.toml  Makefile
server/docker/: Dockerfile
server/src/: main.rs
server/src/app/application/: mod.rs
server/src/app/application/dtos/user/: login_dto.rs
server/src/app/application/interactors/user/: login_interactor.rs  mod.rs
server/src/app/application/use_cases/user/: login_use_case.rs  mod.rs
server/src/app/domain/entities/user/: user_entity.rs
server/src/app/domain/repositories/user/: user_repository.rs
server/src/app/domain/value_objects/user/: mod.rs  password.rs  user_id.rs
server/src/app/infrastructure/: mod.rs
server/src/app/infrastructure/error/: mod.rs
server/src/app/infrastructure/mysql/connection/: mod.rs
server/src/app/infrastructure/mysql/migrations/: 20240623074540_users.sql
server/src/app/infrastructure/mysql/repositories/: mysql_user_repository.rs
server/src/app/presentation/: mod.rs
server/src/app/presentation/handlers/: graphql_handler.rs
server/src/app/presentation/resolvers/: mod.rs  resolver_base.rs
server/src/app/presentation/resolvers/mutations/: auth_mutation.rs  mod.rs
server/src/app/presentation/resolvers/queries/: hello_query.rs  mod.rs
server/src/bootstrap/: mod.rs
server/src/cli/: mod.rs
server/src/config/: env.rs  log.rs
server/src/di/: di_container.rs  mod.rs  repository_provider.rs  use_case_provider.rs
server/src/graphql/: mod.rs  schema.graphql
server/src/lib/: api_error.rs
server/src/routes/: graphql_router.rs  mod.rs
(+34 files in other folders)
