[package]
name = "crypto_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-graphql = "7.0.5"
async-graphql-axum = "7.0.6"
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
hyper = { version = "1.3.1", features = ["full"]}
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"]}
structopt = "0.3.26"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
shaku = "0.6.1"
ddd_macros = {git = "https://github.com/dean-jet-ink/ddd_macros"}